--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
 }
 
 dependencies {
@@ -33,13 +37,15 @@ dependencies {
     //图片请求框架
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.8.0'
-    //黄油刀，注解绑定视图
-    implementation 'com.jakewharton:butterknife:10.0.0'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
+    //注解绑定视图
+    implementation 'com.jakewharton:butterknife:10.1.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:10.1.0'
     //消息总线
     implementation 'org.greenrobot:eventbus:3.1.1'
     //recyclerView的封装
     implementation 'com.jtechlib2:jrecycler-library:2.0.7'
     //权限申请
     implementation 'com.karumi:dexter:4.2.0'
+    //加载动画库
+    implementation 'com.github.ybq:Android-SpinKit:1.2.0'
 }
